# unifac-cli

./: .gitignore  Cargo.toml  README.md
assets/: demo.yaml
src/: main.rs
