[package]
name = "unifac-cli"
version = "0.1.0"
authors = ["Mikel Muennekhoff <mmuennekhoff+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
unifac = {path = "../unifac", version = "0.1"}

[dev-dependencies]
rusty-hook = "^0.11.2"